<?xml version="1.0"?>
<package>
  <name>rft_sensor</name>
  <version>0.0.0</version>
  <description>The rft_sensor package</description>
  <maintainer email="andrea@todo.todo">andrea</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/rft_sensor</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
   <build_depend>iiwa_msgs</build_depend>
  <build_depend>iiwa_ros</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>iiwa_msgs</run_depend>
  <run_depend>iiwa_ros</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
